--- a/Project_Example.Rmd
+++ b/Project_Example.Rmd
@@ -2,6 +2,8 @@
 
 ## Data Used
 
+~test changes 2~
+
 The data that I am using for my project is from the World Happiness Report.
 
 I obtained the data from Kaggle.com at this link: https://www.kaggle.com/ajaypalsinghlo/world-happiness-report-2021/download.
